--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,26 @@
 
 html {
   font-size: 16px;
-  background: rgb(216, 216, 221);
+  /* background: rgb(173, 173, 192);
+  color: azure; */
+  background: #c2e59c; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #64b3f4,
+    #c2e59c
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #64b3f4,
+    #c2e59c
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 header.cabecalho {
   background: url(../img/backgound.jpg);
   background-size: cover;
+  border-radius: 20px;
+  margin: 15px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -24,7 +38,8 @@ header.cabecalho {
     rgba(49, 228, 227, 1) 35%,
     rgba(0, 212, 255, 1) 100%
   ); */
-  padding: 10px;
+  padding: 20px;
+  border: none;
 }
 
 header.cabecalho h1 {
@@ -58,9 +73,35 @@ nav.menu a:hover {
   background-color: rgb(56, 167, 231);
 }
 
+main.text {
+  text-align: justify;
+  margin: 50px;
+  justify-content: center;
+  font-family: "Merriweather", serif;
+  font-size: 0.9rem;
+  text-indent: 30px;
+}
+
+/* div.cards-text {
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+}
+
+div.card-text {
+  margin: 1px solid black;
+} */
+
 section.background {
   text-align: center;
   padding: 20px;
+}
+
+section.background legend {
+  font-family: "Merriweather", serif;
+  font-size: 0.8rem;
+  text-align: center;
+  font-weight: bold;
 }
 
 section.background img {
@@ -92,7 +133,7 @@ div.card {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  border: 1px solid black;
+  border: 0.5px solid black;
   border-radius: 5px;
 }
 
