--- a/css/style.css
+++ b/css/style.css
@@ -6,28 +6,16 @@
   box-sizing: border-box;
 }
 
+body {
+  background: url(../img/backgound.jpg) no-repeat;
+  background-size: cover;
+}
+
 html {
   font-size: 16px;
-  /* background: rgb(173, 173, 192);
-  color: azure; */
-  background: #c2e59c; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #64b3f4,
-    #c2e59c
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #64b3f4,
-    #c2e59c
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 header.cabecalho {
-  background: url(../img/backgound.jpg);
-  background-size: cover;
-  border-radius: 20px;
-  margin: 15px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -74,46 +62,32 @@ nav.menu a:hover {
 }
 
 main.text {
-  text-align: justify;
-  margin: 50px;
-  justify-content: center;
+  background: linear-gradient(rgba(0,0,0, .50), rgba(0,0,0, .50) 100%),  url(../img/capa-nova.jpg) no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  color: #ecebeb;
   font-family: "Merriweather", serif;
-  font-size: 0.9rem;
-  text-indent: 30px;
-}
-
-/* div.cards-text {
-  justify-content: space-around;
-  align-items: center;
+  font-size: 1rem;
   display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
-div.card-text {
-  margin: 1px solid black;
-} */
-
-section.background {
-  text-align: center;
-  padding: 20px;
+article {
+  margin: 10px;
 }
 
-section.background legend {
-  font-family: "Merriweather", serif;
-  font-size: 0.8rem;
-  text-align: center;
+span {
   font-weight: bold;
-}
-
-section.background img {
-  width: 90%;
-  height: 400px;
-  border-radius: 3px;
 }
 
 div.title-conteiner h2 {
   text-align: center;
   font-family: "Merriweather", serif;
-  margin-top: 15px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 section.conteiner {
@@ -121,7 +95,7 @@ section.conteiner {
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
-  margin-top: 10px;
+  margin-top: 25px;
   padding: 10px;
   flex-wrap: wrap;
 }
@@ -167,13 +141,18 @@ section.video {
 section.video h5 {
   font-size: 1rem;
   font-family: "Merriweather", serif;
-  margin-top: 15px;
+  margin-top: 50px;
 }
 
 iframe {
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 20px;
   border-radius: 15px;
+}
+
+iframe:hover {
+  transform: scale(1.2);
+  transition-duration: 0.5s;
 }
 
 footer {
@@ -201,8 +180,13 @@ footer img {
   }
 
   div.card {
-    width: 85%;
+    width: 100%;
     margin-bottom: 10px;
+  }
+
+  main.text {
+    font-size: 0.8rem;
+    text-align: center;    
   }
 
   section.video h5 {
