ajuste responsive mobile

--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,10 @@ footer img {
     width: 420px;
   }
 
+  iframe:hover {
+    transform: scale(1);
+  }
+
   footer {
     flex-direction: column;
   }
